<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#DCE3CC"
    tools:context=".ui.ui.views.CreatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator_page"
                android:textSize="18sp"
                android:textColor="#5D4037"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator_header"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:textColor="#5D4037" />
        </LinearLayout>

        <!-- Mobile Development Team -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="7dp"
            android:paddingStart="90dp"
            android:text="@string/mobile_development_team"
            android:textSize="16sp"
            android:textColor="#5D4037"
            android:background="@drawable/bg_button"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/abin_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/ahmad_bintara"
                android:src="@drawable/abin" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/saci"
                android:layout_margin="8dp"
                android:contentDescription="@string/aisha_neurini" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobdev_team"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="12sp" />

        <!-- Cloud Computing Team -->
        <TextView
            android:layout_width="match_parent"
            android:text="@string/cloud_computing_team"
            android:textSize="16sp"
            android:background="@drawable/bg_button"
            android:textColor="#5D4037"
            android:fontFamily="sans-serif-medium"
            android:layout_height="35dp"
            android:paddingTop="7dp"
            android:paddingStart="90dp"
            android:layout_marginTop="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/faisal"
                android:layout_margin="8dp"
                android:contentDescription="@string/muhammad_faisal" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/najeb"
                android:layout_margin="8dp"
                android:contentDescription="@string/naufal_nazhir" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cc_team"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="12sp" />

        <!-- Machine Learning Team -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="7dp"
            android:paddingStart="90dp"
            android:text="@string/machine_learning_team"
            android:textSize="16sp"
            android:textColor="#5D4037"
            android:background="@drawable/bg_button"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ghani"
                android:layout_margin="8dp"
                android:contentDescription="@string/ghani_raffi" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ridho"
                android:layout_margin="8dp"
                android:contentDescription="@string/muhammad_ridho" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/mutia"
                android:layout_margin="8dp"
                android:contentDescription="@string/mutia_sahira" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/ghani_raffi_irawan_muhammad_ridho_hidayat_mut"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>