<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regisakun"
    tools:context=".ui.ui.views.auth.RegisterActivity">

    <!-- Illustration Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="24dp"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/illustakun"
        android:contentDescription="@string/illustakun_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Title Text -->
    <TextView
        android:id="@+id/register_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/register_header"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/itim_font_family"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/register_subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/register_subheader"
        android:textColor="@color/colorSecondary"
        android:fontFamily="@font/itim_font_family"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Username -->
    <TextView
        android:id="@+id/title_register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_username"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/itim_font_family"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/register_subheader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_register_username"
        android:fontFamily="@font/itim"
        android:background="@drawable/button_placeholder"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        android:padding="12dp"
        android:drawableStart="@drawable/register_username"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_register_username"
        android:layout_marginHorizontal="16dp" />

    <!-- Email -->
    <TextView
        android:id="@+id/title_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_email"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/itim_font_family"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/register_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_register_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/itim"
        android:background="@drawable/button_placeholder"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        android:padding="12dp"
        android:drawableStart="@drawable/register_email"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_register_email"
        android:layout_marginHorizontal="16dp" />

    <!-- Password -->
    <TextView
        android:id="@+id/title_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_password"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/itim_font_family"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_register_password"
        android:inputType="textPassword"
        android:fontFamily="@font/itim"
        android:background="@drawable/button_placeholder"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        android:padding="12dp"
        android:drawableStart="@drawable/register_password"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_register_password"
        android:layout_marginHorizontal="16dp" />

    <!-- Confirm Password -->
    <TextView
        android:id="@+id/title_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/itim_font_family"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="16dp"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:fontFamily="@font/itim"
        android:background="@drawable/button_placeholder"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        android:padding="12dp"
        android:drawableStart="@drawable/confirm_password"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_confirm_password"
        android:layout_marginHorizontal="16dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_button_register"
        android:background="@drawable/regis_rounded_button"
        android:textColor="@color/colorOnPrimary"
        android:fontFamily="@font/itim"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:textAllCaps="false" />

    <!-- Login Button -->
    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_button_login"
        android:fontFamily="@font/itim"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>