<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_title"
            android:paddingStart="110dp"
            android:paddingEnd="0dp"
            android:layout_marginBottom="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_saved_recipes"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/recipe_fav_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/cheeseburger_potato_soup"
                android:contentDescription="@string/chicken_egg_scramble" />


            <ImageView
                android:id="@+id/image_view_2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/fresh_strawberry_pie"
                android:contentDescription="@string/schicken_egg_scramble" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe_fav_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                id="@+id/recipe_left"
                android:paddingLeft="35dp"
                android:layout_width="wrap_content"
                android:paddingTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/recipe_left"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:paddingLeft="50dp"
                android:id="@+id/recipe_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fresh_strawberry_pie" />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorOnPrimary"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/colorOnPrimary"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>